# grpcstream

./: Cargo.toml
src/: client.rs  server.rs
src/protos/: mod.rs  stream.proto  stream.rs  stream_grpc.rs
