[package]
name = "grpcstream"
version = "0.1.0"
authors = ["Shafreeck Sea <shafreeck@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
grpcio="=0.4.2"
futures="0.1.29"
protobuf="2.0.6"
futures-cpupool = "0.1"